services/sonarqube/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonar-prod
  labels:
    app.kubernetes.io/name: sonar
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonar.dev.zippelf.com`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          port: 9000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonar-tls-prod
  labels:
    app.kubernetes.io/name: sonar
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonar.dev.zippelf.com`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          port: 9000
  tls:
    secretName: tls-sonar-ingress-prod
